# misc_scripts_tools

./: .gitignore  correcting-kuwpica.ipynb  env-vars  fits_maths.py  garf_to_website.sh  high-SNR.sh  lsm2reg.py  qu_pol  requirements.txt  rm_synthesis.py  run_most_rm_things.sh  scrap.py  scrap_plot.py  smooth.py  useful_iimage_stats_stuff.sh
fits_related/: fits_maths.py  interp_model.py  plotting_bmaj_bmin.py  random_fits_utils.py  requirements.txt  simple-mask.py  smooth.py
notebook_tiktak/: delete_cell_output.py
polarisation_stuff/: FIT-QU-CUBE-RANDOM.py  brentjens-rmsynth-after.py  commands.txt  compare-mods.py  new-fit.py  old-plot-vectors.py  pica_rm-x2.py  plot-vectors.py  plt-script.py  post.txt  radial_profiles.ipynb  random-code-pieces.py  requirements.txt  rm_synthesis.py  scrap.py  sharp-rm.reg  test-paper-plots-redemption.ipynb  test_paper_plots.py  x2-FIT-QU-CUBE-RANDOM.py
polarisation_stuff/bokeh/: plot_bk.py  plots.yml
polarisation_stuff/investigation/: generate-mock-data-2comp.ipynb  generate-mock-data.ipynb  plt-script.py  problematic-rm-all.reg  rm-weirdos-only.reg
polarisation_stuff/investigation/2-peaks/: 2-peak-sels.txt  2-peaks-00.reg  2-peaks-01.reg  2-peaks-02.reg  2-peaks-03.reg  2-peaks-04.reg
polarisation_stuff/scrappy/: README.rst  arguments.py  ghost.txt  image_utils.py  math_utils.py  plotting.py  requirements.txt  rm_math.py  scraplog.py  scrappy.py  setup.cfg  showrunner.sh  utils.py
polarisation_stuff/scrappy/bokeh/: plot_bk.py
polarisation_stuff/scrappy/post/: showrunner.sh
polarisation_stuff/scrappy/rmsynthesis/: fit-qu-cube-random-x2.py  rm_synthesis.py  rmmap-x2.py  rmmap_x2.py
polarisation_stuff/scrappy/scrap/: arguments.py  image_utils.py  plot_bmaj_bmin.py  plotting.py  scraplog.py  scrappy.py
polarisation_stuff/scrappy/src/: main.py
polarisation_stuff/scrappy/src/rmsynthesis/: rm_synthesis.py  rmmap_x2.py
polarisation_stuff/scrappy/utils/: genutils.py  logger.py  rmmath.py
qu_pol/: commands.txt  scrap.py  scrap_plot.py
qu_pol/bokeh/: plot_bk.py  plots.yml
