[metadata]
#check gist for reference
name = scrappy
version = 0.1.0
author = Lexy Andati
author_email = landati@duck.com
description = Generate polarimetric spectra on independent lines of sight across a source
long_description = file: README.rst
long_description_content_type = text/rst
url = https://github.com/scrappy
license = MIT
classifiers = 
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Astronomy


[options]
packages = 
    bokeh
    rmsynthesis
    scrap
    utils
    
python_requires = >=3.7
install_requires = 
    astropy
    bokeh
    regions
    numpy
    matplotlib
    natsort
    scipy

[options.extras_require]
# when needed
casa = casatasks

[options.entry_points]
console_scripts = 
    scrappy-los = scrap.scrappy:scrappy:console
    scrappy-rm = scrap.rmsynthesis:rm_synthesis:console
    scrappy-rmmap = scrap.rmsynthesis:rmmap-x2:console
    scrappy-rmmap = scrap.bokeh:console
    